Refactor `UpdateExecutor` to handle strict index type mismatches; enhance query execution in `UnionNode` with batched document retrieval; switch to Unpooled buffers in Redis handlers for improved allocation efficiency; add `kronotop-cli` Maven module and `InternalClientPool` with tests; update dependencies and improve consistency across classes.